tests/errors/compiler/no_comma_in_setmotor/setmotor.c
void main()
{
	int arr[1];
	setmotor(1);
}
